--- a/src/webapp/WEB-INF/pages/edit.html
+++ b/src/webapp/WEB-INF/pages/edit.html
@@ -6,22 +6,36 @@
     <title>Edit user</title>
 </head>
 <body>
-<form class="pure-form pure-form-aligned" th:method="patch" th:action="@{/users/{id}(id=${user.getId()})}" th:object="${user}">
+<!-- edit.html -->
+<form class="pure-form pure-form-aligned" th:object="${user}" th:action="@{/users/{id}(id=${user.id})}" method="post">
     <div class="pure-control-group">
-        <label th:for="name">Name</label>
-        <input type="text" th:field="*{name}" />
+        <label th:for="name">Имя:</label>
+        <input type="text" id="name" th:field="*{name}" required pattern="[A-Za-zА-Яа-я]+" />
+        <div th:if="${#fields.hasErrors('name')}">
+            <p th:errors="*{name}"></p>
+        </div>
     </div>
+
     <div class="pure-control-group">
-        <label th:for="lastName">Last name:</label>
-        <input type="text" th:field="*{lastName}" />
+        <label th:for="lastName">Фамилия:</label>
+        <input type="text" id="lastName" th:field="*{lastName}" required pattern="[A-Za-zА-Яа-я]+" />
+        <div th:if="${#fields.hasErrors('lastName')}">
+            <p th:errors="*{lastName}"></p>
+        </div>
     </div>
+
     <div class="pure-control-group">
-        <label th:for="email">Email: </label>
-        <input type="text" th:field="*{email}" />
+        <label th:for="email">Email:</label>
+        <input type="email" id="email" th:field="*{email}" required />
+        <div th:if="${#fields.hasErrors('email')}">
+            <p th:errors="*{email}"></p>
+        </div>
     </div>
+
     <div class="pure-control-group">
         <input class="pure-button pure-button-primary pure-u-1-4" type="submit" value="Update!">
     </div>
 </form>
+
 </body>
 </html>
